--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -4,7 +4,7 @@
 
 a.  
 **ISA** - (Instruction Set Architecture)  
-Formel for klokkefrekvens = 1/t.  
+Formel for klokkefrekvens = 1/t.  t = aksesstid
 Ved pipelining angis klokkefrekvensen ved det tregeste steget.
 
 Alternativ 1 uten pipeline:
@@ -101,3 +101,32 @@ a.
   Fra hex (8800 til EFFF)
 
 b.
+1
+Klokke på 500 000hz = 0.5Mhz.  
+Én instruksjon per klokkeperiode.
+
+1µs = 1 000 000hz.
+Vi har en klokke på 500 000hz som vil si 2µs. (Du kan aksessere ROM 2 ganger per sykel)
+
+Antall instruksjoner per sykel = Klokkefrekvens / Aksesstid  = 2µs / 1µs = 2  
+Aksesstid = x  
+Klokkefrekvens = 2 Mhz (2 000 000 Hz)  
+Antall instruksjoner per sykel = >=1  
+
+
+Antall instruksjoner per sykel = Klokkefrekvens / Aksesstid  = 2µs / 1µs = 2
+**Instruksjon per sykel:** 1  
+**Klokkefrekvens vi får oppgitt:** 2 000 000hz = 2Mhz = 0.5µs  
+**Aksesstid på nårævrende ROM:** 1µs  
+Da får vi at:
+
+Skal ha 1:
+0.5µs / 1µs = 2 =/= 1.
+
+Dersom klokkefrekvensen er 2Mhz vil den starte en ny 'spørring' før ROM har blitt aksessert ferdig.  
+For å fikse dette kan vi senke aksesstiden til x:
+
+0.5µs / x = 1
+x = 0.5µs.
+
+Dersom ROM-brikken hadde hatt en aksesstid på 0.5µs ville det fungert, men det vil ikke fungere i dette tilfellet da den er 0.1µs.
