--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -130,3 +130,6 @@ For å fikse dette kan vi senke aksesstiden til x:
 x = 0.5µs.
 
 Dersom ROM-brikken hadde hatt en aksesstid på 0.5µs ville det fungert, men det vil ikke fungere i dette tilfellet da den er 0.1µs.
+
+c.  
+Dette er en Moore machine. Det er kun 'current state' som blir brukt for dekoding av utsignal. Det finnes ingen kobling mellom inngang og dekonding av state. Se på bilder i README-filen.
