--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -132,4 +132,25 @@ x = 0.5µs.
 Dersom ROM-brikken hadde hatt en aksesstid på 0.5µs ville det fungert, men det vil ikke fungere i dette tilfellet da den er 0.1µs.
 
 c.  
-Dette er en Moore machine. Det er kun 'current state' som blir brukt for dekoding av utsignal. Det finnes ingen kobling mellom inngang og dekonding av state. Se på bilder i README-filen.
+  >i)    
+    Dette er en Moore machine. Det er kun 'current state' som blir brukt for dekoding av utsignal. Det finnes ingen kobling mellom inngang og dekonding av state. Se på bilder i README-filen.  
+
+  >ii)  
+  ![Tabell2015](./images/tabell2015.jpeg)
+
+  >iii)  
+    Y = Q0 XOR Q1. 
+
+
+## Oppgave 3: MIKROARKITEKTUR OG MIKROINSTRUKSJONER (25% (5% PÅ A, 10% PÅ B OG C))
+
+a.
+  >i)  
+    MBR kan ikke skrives til og MAR kan ikke leses fra. MIR og MPC er en del av kontrollenheten og er heller ikke tilgjengelig for programmereren.
+
+  >ii)  
+    **MAR:** - (Memory Address Register). Inneholder peker til en minnelokasjon. Eksternt dataminne.
+    **MDR:** - (Memory Data Register). Inneholder data fra lokasjonen MAR peker på ved read og inneholder data til minnelokasjonen ved write.
+
+b.
+  >i)  
