--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -152,5 +152,21 @@ a.
     **MAR:** - (Memory Address Register). Inneholder peker til en minnelokasjon. Eksternt dataminne.
     **MDR:** - (Memory Data Register). Inneholder data fra lokasjonen MAR peker på ved read og inneholder data til minnelokasjonen ved write.
 
-b.
+b.  
   >i)  
+    ALU: B. Skal gi ut det som kommer inn på B-inngangen.  
+    C: MAR. Output fra ALU skal skrives til MAR fra C-bussen.  
+    B: TOS. B-bussen skal gi data TOS.  
+
+
+    ALU: 010100  
+    C: 000000001  
+    B: 0111  
+
+  > ii)  
+    ALU: B, C: H, B: LV (Mellomlagrer LV i H)  
+    ALU: A + B, C: H, B: MDR (H = LV + MDR)  
+    ALU: A + B, C: PC, B: PC (PC = H + PC)
+
+
+c.  
