--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -170,3 +170,30 @@ b.
 
 
 c.  
+  ```
+  ”SP”: hex(0001) -> 0b001, 
+  ”LV”: hex(0002) -> 0b0010, 
+  ”CPP”: hex(0003) -> 0b0011, 
+  ”TOS”: hex(0004) -> 0b0100, 
+  ”OPC”: hex(0005) -> 0b0101, 
+  ”H”: hex(FF0A) -> 0b1111111100001010.
+  ```
+
+  1: ALU: 010100, C: 100000000, Mem: 000 og B: 0110  
+  ```
+  ALU: B, C: H, MEM: Ikke noe, B: CPP 
+  // H = CPP
+  ```
+  2: ALU: 011100, C: 101000000, Mem: 000 og B: 0111  
+  ```
+  ALU: OR, C: H og TOS, MEM: Ikke noe, B: TOS 
+  // H = H OR TOS -> 0b0011 || 0b0100 = *0b0111*
+  ```
+  3: ALU: 001100, C: 001000000, Mem: 000 og B: 1000 
+  ```
+  ALU: AND, C: TOS, MEM: Ikke noe, B: OPC
+  // TOS = H AND OPC -> 0b0111 && 0b0101 = *0b0101*
+  ```
+
+  H = 0b0111 = hex(0007)  
+  OPC = 0b0101 = hex(0005) Uendret.
