--- a/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
+++ b/TDT4160 - Datamaskiner og digitalteknikk/Exams/H2015.md
@@ -197,3 +197,64 @@ c.
 
   H = 0b0111 = hex(0007)  
   OPC = 0b0101 = hex(0005) Uendret.
+
+  ## OPPGAVE 4: INSTRUKSJONSSETT ARKITEKTUR (ISA)(25 % ((5 % PÅ A, B,C OG 10 % PÅ D))
+
+  a.   
+  >i) ***BZ*** =  Flow control. Conditional branch on zero. One address, no operand  
+  >ii) ***RT*** = Flow Control, Return from branch., No Address, no operand
+
+  b.  
+  >i) ***MOVC***: Immediate. Operanden sin verdi er gitt som en operand (Den peker ikke på en adresse med en verdi). Dette gjelder offte hardkodede operander etc.  
+  >ii) ***CP***: Register addressering. Hver operand er et register.
+
+  c.  
+  Ja, begge bruker 32 bits register som kilde for å adressere minne. 
+
+  d.
+- MOVC R1, 0x00 55; 
+  ```
+  R1 = 0x0055
+  ```
+
+- MOVC R2, 0x00 AA; 
+  ```
+  R2 = 0x00AA
+  ```
+
+- STORE R1, R2; 
+  ```
+  Innholdet i R1 lagres i addressen [R2], 0x00AA.
+  ```
+
+- ADD R1, R1, R3; 
+  ```
+  R1 = [R1], [R3]
+  ```
+- STORE R1, R3; 
+  ```
+  Innholdet i R1 lagres i [R3], ukjent adresse
+  ```
+
+- LOAD R1, R2 
+  ```
+  R1 = Innholdet på lokasjonen [R2], 0x00AA som er 0x0055 (Adressen i R2 peker på R1).
+  ```
+
+- INV R3, R3; 
+  ```
+  Inverterer R3.
+  ```
+
+- CMP R1, R2; 
+  ```
+  Sammenligner innholdet i R1 og R2. R1 = 0x0055, R2 = 0x00AA. De er ikke like, Z = 0.
+  ```
+
+- BZ R2;
+  ```
+  Vil ikke hoppe.
+  ```
+
+>i) Vil hoppe til adressen i R2.  
+>ii) Nei, Z-flagget blir ikke satt.
