--- a/TTM4100 - Kommunikasjon - Tjenester og nett/Exams/V18.md
+++ b/TTM4100 - Kommunikasjon - Tjenester og nett/Exams/V18.md
@@ -1,6 +1,6 @@
 # TTM4100 KOMMUNIKASJON – TJENESTER OG NETT, 15. mai 2018
 
-## Del 1: True - False questionsl (50 points)
+## 1: True - False questionsl (50 points)
 
 **1.1.1**: The Real-Time Protocol (RTP) typically uses the TCP protocol for transport. `FALSE`
 
@@ -118,3 +118,11 @@
 **1.5.10**: It is possible to actively provoke error messages from ICMP (Internet Control Message Protocol). `TRUE`
 
 
+***
+
+## 2: Multiple areas (20 p)
+**2.1**: c) and d) is correct.
+
+**2.1**: e) and g) is correct.
+
+**2.3.**: 
