--- a/TDT4259 - Anvendt data science/Individual Assignment/library.bib
+++ b/TDT4259 - Anvendt data science/Individual Assignment/library.bib
@@ -8,6 +8,20 @@
   file = {/Users/magnusholtet/Zotero/storage/ZHMD98N4/jobs.voiapp.io.html}
 }
 
+@misc{SafetyPledge,
+  title = {Safety {{Pledge}} -},
+  journal = {Voi},
+  langid = {english},
+  file = {/Users/magnusholtet/Zotero/storage/UU6MARWP/safety-pledge.html}
+}
+
+@misc{Sustainability,
+  title = {Sustainability -},
+  journal = {Voi},
+  langid = {english},
+  file = {/Users/magnusholtet/Zotero/storage/ZASJJSLW/sustainability.html}
+}
+
 @misc{VartSikkerhetslofteSikkerhet,
   title = {{V\aa rt sikkerhetsl\o fte - Sikkerhet er en del av v\aa rt DNA.}},
   journal = {Voi},
