Always remember that you are unique. Just like everybody else.

--- a/TDT4259 - Anvendt data science/Individual Assignment/library.bib
+++ b/TDT4259 - Anvendt data science/Individual Assignment/library.bib
@@ -1,4 +1,13 @@
 
+@misc{ChurnRate,
+  title = {Churn {{Rate}}},
+  journal = {Investopedia},
+  abstract = {The churn rate is the percentage of subscribers who discontinue service subscriptions within a given time. Learn how to calculate customer churn rate.},
+  howpublished = {https://www.investopedia.com/terms/c/churnrate.asp},
+  langid = {english},
+  file = {/Users/magnusholtet/Zotero/storage/6GGJ2Q7B/churnrate.html}
+}
+
 @misc{RideVOIFuture,
   title = {Ride with {{VOI}} to the {{Future}}!},
   journal = {Voi Technology},
